--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Name of your site (displayed in the header)
 name: "lemon's blog"
 # Short bio or description (displayed in the header)
-description: "个人技术公众号：程序员柠檬  分享编程资源 | 学习路线"
+description: "是少年孤愤，看天地不仁"
 
 #
 # Flags below are optional
@@ -73,7 +73,7 @@ gitalk:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: https://lemonchann.github.io
+url: https://tianyi-hu.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
