--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Name of your site (displayed in the header)
 name: "Tianyi's blog"
 # Short bio or description (displayed in the header)
-description: "是少年孤愤，看天地不仁"
+description: "回头万里，故人长绝"
 
 #
 # Flags below are optional
