--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Name of your site (displayed in the header)
 name: "Tianyi's blog"
 # Short bio or description (displayed in the header)
-description: "回头万里，故人长绝"
+description: "Find More About me: https://www.douban.com/people/shanyueyuguren/statuses"
 
 #
 # Flags below are optional
